--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
 :host {
-    padding: 2rem;
+    padding: 3rem 2rem;
     background-color: var(--secondary);
     color: var(--primary-light);
     display: flex;
@@ -12,10 +12,9 @@
     overflow: auto;
 
     @media (max-width: 500px) {
-        padding: 8px !important;
+        padding: 34px 10px!important;
     }
 }
-
 
 .wrapper{
     display: flex;
@@ -68,8 +67,6 @@
     .text {
         max-width: 95%;
     }
-
-
 }
 // below Graph: website & Co.
 .furtherInfos {
@@ -89,7 +86,6 @@
 
     .websiteLink{
         cursor: pointer;
-
     }
 
     .icon {
@@ -111,19 +107,21 @@
 .shortText{
     margin-bottom: 40px;
 
+    @media (max-width: 1100px) {
+        margin-bottom: 10px;
+    }
+
     .readMore {
         font-style: italic;
         font-weight: var(--font-bold);
         cursor: pointer;
         color: var(--accent2);
         transition: all 120ms ease-in-out;
-        
 
         &:hover {
             color: var(--primary-light);
         }
     }
-
 }
 .desktopOnly {
     @media (max-width: 1100px) {
@@ -137,8 +135,6 @@
         display: block;
     }
 }
-
-
 
 .accentColor {
     color: var(--accent2);
