--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,13 +7,14 @@
 }
 
 :root {
-    --bg: #101214;
+    --bg: #041c41;
     --primary-light: rgb(248, 240, 240);
-    --secondary: #32363d;
+    --secondary: #364661;
     --accent1: #e902b3;
     --accent2: #13e2a4;
     --muted: #12bb88; // z.B. Menu inactive tab
     --link: lightgrey;
+    --assetGrey: rgb(156, 164, 173);
     --font-bold: 400;
     --font-xBold: 600;
     --font-thin: 200;
