--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,7 +36,7 @@
 
     @media (max-width: 500px) {
         margin-right: 1em;
-        margin-left: 0;
+        margin-left: 1em;
         margin-top: 155px;
     }
 }
