--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -3,71 +3,76 @@
     justify-content: flex-end;
     align-items: center;
     gap: 2rem;
-    // background-color: black;
     min-height: 30px;
     width: 100%;
     color: var(--primary-light);
     transition: all 200ms ease-in-out;
 }
 
-.icon{
+.icon {
     width: 22px;
     margin-right: 10px;
     margin-top: 2px;
-    fill: red;
 }
-// svg{
-//     width: 70px;
-//     height: 70px;
-//     color: red!important;
-//     fill: blue!important; 
-// }
-a{
+
+a {
     position: absolute;
     bottom: 4px;
-    left: 0;
-    transform: translateX(48%);
+    left: 50%;
+    transform: translate(-50%, 0)!important;
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     z-index: 100;
     color: var(--accent2);
+
+    @media (max-width: 1100px) {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 0)!important;
+
+        // transform: translateX(-50%);
+    }
 }
 
-.changeColor{
-    color: var(--secondary)!important;
-    @media (max-width: 1100) {
-        color: var(--primary-light)!important;
-    }
+.changeColor {
+    color: var(--primary-light) !important;
+
 }
 
 .wrapperDiv {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    min-width: 280px;
+    height: 34px;
+    width: 100%;
     cursor: pointer;
+    max-width: 320px;
 
+    @media (max-width: 1100) {
+        color: var(--primary-light) !important;
+        width: 100%;
+        max-width: 1000px;
+    }
 
-    .wrapper-graph{
+    .wrapper-graph {
         position: relative;
-        height: 100%; 
+        height: 100%;
         width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
+        min-width: 140px;
 
-
-        &::after{
-            content: '';
+        &::after {
+            content: "";
             // inactive background for graph tab
-            background-color: var(--muted);
+            background-color: rgba(122, 134, 146, 0.698);
             border-top-left-radius: 4px;
             border-top-right-radius: 16px;
             width: 100%;
-            height: 100%; 
+            height: 100%;
             position: absolute;
             bottom: 0;
             left: 0;
@@ -76,28 +81,25 @@ a{
         }
     }
 
-    .wrapper-table{
+    .wrapper-table {
         position: relative;
-        height: 100%; 
+        height: 100%;
         width: 50%;
+        min-width: 140px;
 
-
-
-        &::after{
+        &::after {
             position: absolute;
-            content: '';
+            content: "";
             // inactive background for table tab
-            background-color: var(--muted);
+            background-color: rgba(122, 134, 146, 0.698);
             border-top-left-radius: 16px;
             border-top-right-radius: 4px;
             width: 100%;
-            height: 100%; 
+            height: 100%;
             bottom: 0;
             left: 0;
             right: 0;
             z-index: 1;
-
-       
         }
     }
 
@@ -112,14 +114,12 @@ a{
         border-right: 2px solid rgba(0, 0, 0, 0.24);
         height: 100%;
         // inactive background for graph tab
-        background-color:var(--secondary);
+        background-color: var(--secondary);
         border-top-left-radius: 4px;
         border-top-right-radius: 16px;
         z-index: 0;
-
     }
 
-    
     .table {
         position: absolute;
         bottom: 0;
@@ -129,8 +129,8 @@ a{
         padding-left: 25px;
         padding-right: 25px;
         height: 100%;
-             // active background for table tab
-        background-color:var(--secondary);
+        // active background for table tab
+        background-color: var(--secondary);
         border-top-left-radius: 16px;
         border-top-right-radius: 4px;
         z-index: 0;
@@ -151,4 +151,3 @@ a{
         height: 100%;
     }
 }
-
