--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -3,7 +3,8 @@
     #mycanvas 
     baseChart 
     id="mycanvas"
-    chartType="line"
+    width="350"
+    height="200"
     >
     {{chart}}
 </canvas>
