--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@
 
     @media (max-width: 1100px) {
         height: max-content;
+        justify-content: center;
     }
 }
 
@@ -17,22 +18,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 60px;
-    margin-bottom: 60px;
-    margin-right: 3rem;
-    gap: 2rem;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 2rem;
+    gap: 1rem;
     width: 100%;
     max-width: 100%;
 
     @media (max-width: 1100px) {
         flex-direction: column;
         height: max-content;
-        margin-right: 2em;
-        margin-left: 2em;
+        margin-right: 2rem;
+        margin-left: 2rem;
         margin-top: 150px;
     }
-
-
 
     @media (max-width: 500px) {
         margin-right: 1em;
@@ -48,8 +47,13 @@
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    width: 100%;
+    width: 65vw;
     max-width: 100%;
+
+    @media (max-width: 1100px) {
+        width: 93vw;
+    }
+
 }
 
 .flex-1 {
