--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -1,28 +1,36 @@
-:host{
-    width: 100%;
+:host {
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex: 1;
+    justify-content: center;
+    max-height: 50vh;
+    flex: 1 !important;
+    transition: all 0ms;
 }
 
-.graph{
-    width: 100%;
-    height: 100%;
+.graph {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     max-width: 960px;
     max-height: 40vh;
-    flex: 1;
 
     @media (min-width: 1000px) {
-        max-height: 60vh;   
-     }
+        max-height: 60vh;
+    }
 }
 
-canvas{
-    width: 100%;
-    height: 100%;
-    height: 100%;
-    max-height: 100%;
+// canvas{
+//     width: unset;
+//     height:100%;
+// }
+
+#mycanvas {
+    width: auto !important;
+    height: auto !important;
+    // height: auto!important;
     max-width: 100%;
-    flex: 1;
+    max-height: 40vh;
 }
