--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,13 +38,18 @@
         margin-left: 1em;
         margin-top: 155px;
     }
+
+    @media (min-width: 1600px) {
+        gap: 3.5rem;
+        margin-right: 0rem;
+    }
 }
 
 .main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     width: 65vw;
@@ -52,6 +57,10 @@
 
     @media (max-width: 1100px) {
         width: 93vw;
+    }
+
+    @media (min-width: 1600px) {
+        max-width: 55vw;
     }
 
 }
