--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -15,13 +15,15 @@
     @media (max-width: 500px) {
         padding: 34px 10px !important;
     }
+
+
+
 }
 
 .wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    gap: 1em;
+    justify-content: center;
     height: 100%;
     
 }
