--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -43,27 +43,34 @@ a {
 
 .wrapperDiv {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     height: 34px;
     width: 100%;
     cursor: pointer;
-    max-width: 320px;
 
-    @media (max-width: 1100) {
+    @media (max-width: 1100px) {
         color: var(--primary-light) !important;
-        width: 100%;
         max-width: 1000px;
+    }
+
+    @media (max-width: 600px) {
+        max-width: 3120px;
     }
 
     .wrapper-graph {
         position: relative;
         height: 100%;
-        width: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
-        min-width: 140px;
+        width: 200px;
+
+        @media (max-width: 900px) {
+            width: 400px;
+            max-width: 50%;
+        }
+        
 
         &::after {
             content: "";
@@ -84,8 +91,12 @@ a {
     .wrapper-table {
         position: relative;
         height: 100%;
-        width: 50%;
-        min-width: 140px;
+        width: 200px;
+
+        @media (max-width: 900px) {
+            width: 400px;
+            max-width: 50%;
+        }
 
         &::after {
             position: absolute;
@@ -105,14 +116,14 @@ a {
 
     .graph {
         position: absolute;
-        bottom: 0;
         width: 100%;
+        height: 100%;
+        bottom: 0;
         left: 0;
         right: 0;
-        padding-left: 25px;
-        padding-right: 25px;
+        // padding-left: 25px;
+        // padding-right: 25px;
         border-right: 2px solid rgba(0, 0, 0, 0.24);
-        height: 100%;
         // inactive background for graph tab
         background-color: var(--secondary);
         border-top-left-radius: 4px;
@@ -123,12 +134,12 @@ a {
     .table {
         position: absolute;
         bottom: 0;
-        width: 100%;
         left: 0;
         right: 0;
+        width: 100%;
+        height: 100%;
         padding-left: 25px;
         padding-right: 25px;
-        height: 100%;
         // active background for table tab
         background-color: var(--secondary);
         border-top-left-radius: 16px;
