--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,32 +1,47 @@
 :host {
-    position: absolute;
+    position: fixed;
     color: white;
     background: black;
     bottom: 0px;
     top: 0px;
-    left: 130px;
+    left: 0px;
     right: 0px;
     z-index: 1000;
     padding: 100px 100px;
+    overflow: auto;
+    word-wrap: break-word;
+
+    @media (max-width: 800px) {
+        padding: 40px 40px;
+    }
+
+    @media (max-width: 500px) {
+        padding: 1.5em 1.5em;
+    }
 }
 
 .wrapper {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: var(--primary);
-    overflow: auto;
 }
 
 button {
-    position: absolute;
-    bottom: 40px;
-    right: 80px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
     height: 35px;
     width: 100px;
     color: var(--primary-light);
     background-color: var(--accent1);
     border: 1px solid var(--primary-light);
     border-radius: 25px;
+
+    @media (max-width: 800px) {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+    }
 
     .pos-rel {
         height: 100%;
@@ -49,6 +64,7 @@ button {
         position: absolute;
         bottom: 10px;
         right: 12px;
+        word-wrap: break-word;
     }
 
     // button on hover
@@ -76,6 +92,7 @@ button {
             left: 12px!important;
             right: unset!important;
             transition: all 250ms ease-in-out;
+            word-wrap: break-word;
         }
     }
 }
@@ -96,4 +113,6 @@ h2 {
 
 p {
     margin-top: 30px;
+    margin-bottom: 30px;
+    word-wrap: break-word;
 }
