--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -14,6 +14,11 @@
 
     @media (max-width: 500px) {
         padding: 34px 10px !important;
+    }    
+    
+    @media (max-width: 900px) {
+        border-top-left-radius: 0px !important;
+
     }
 
 
