--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,11 @@
-<!-- <div class="subline-wrapper">
+<div class="subline-wrapper">
     <div class="subline">
-        SIMPLY TRACK your COINS 
- 
+       <span class="track">TRACK</span> 
+       <span class="your">YOUR</span> 
+       <span class="coins">COINS</span> 
+        
     </div>
-</div> -->
+</div>
 
 <h1>TokenX</h1>
 <h1 id="offset">TokenX</h1>
