--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 :root {
     --bg: #031229;
     --primary-light: rgb(248, 240, 240);
-    --secondary: #27344b;
+    --secondary: #303d54;
     --accent1: #e902b3;
     --accent2: #13e2a4;
     --muted: #12bb88; // z.B. Menu inactive tab
