--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,7 @@
     margin-top: 50px;
     margin-bottom: 50px;
     margin-right: 2rem;
+    margin-left: 6rem;
     gap: 1rem;
     width: 100%;
     max-width: 100%;
@@ -33,6 +34,11 @@
         margin-top: 150px;
     }
 
+    @media (max-width: 1280px) {
+        margin-left: 2rem;
+        margin-right: 1.5rem;
+    }    
+    
     @media (max-width: 500px) {
         margin-right: 1em;
         margin-left: 1em;
@@ -41,7 +47,8 @@
 
     @media (min-width: 1600px) {
         gap: 3.5rem;
-        margin-right: 0rem;
+        margin-right: 2rem;
+        margin-left: 2rem;
     }
 }
 
