--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,7 +1,7 @@
 :host {
     position: fixed;
     color: white;
-    background: black;
+    background: var(--bg);
     bottom: 0px;
     top: 0px;
     left: 0px;
