--- a/src/app/sidebar-mobil/sidebar-mobil.component.html
+++ b/src/app/sidebar-mobil/sidebar-mobil.component.html
@@ -2,17 +2,16 @@
 
     <h1>TokenX</h1>
     <div class="subline"> 
-        <span>
-            SIMPLE
+        <span class="track">
+            TRACK
         </span>
-        <span>
-            CRYPTO
+        <span class="your">
+            YOUR
         </span>
-        <span>
-            TRACKING
+        <span class="coins">
+            COINS
         </span>
-          
-
+        
 </div>
 
 </div>
