--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,26 +1,48 @@
 :host {
     display: flex;
     background-color: var(--bg);
-    width: 175px;
+    width: 116px;
+    min-width: 116px;
     display: flex;
     align-items: flex-start;
+
+    @media (min-width: 1600px) {
+        width: 150px;
+    }
+
+    &:after {
+        content: "";
+        width: 1px;
+        background-color: rgba(240, 246, 252, 0.598);
+        height: 200px;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 }
 
 .subline-wrapper {
     display: flex;
     align-items: center;
-    margin-top: 44px;
-    width: 50px;
+    justify-content: center;
+    margin-top: 80px;
+    width: 100%;
     text-align: justify;
 
     .subline {
-        width: 90px;
-        word-wrap: wrap;
-        color: var(--primary-light);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: rgb(253 253 253 / 74%);
         font-size: 24px;
         font-weight: 200;
-        font-family: Arial, Helvetica, sans-serif;
-        text-align: justify;
+
+        .your {
+            font-size: 14px !important;
+            letter-spacing: 10px;
+            margin-left: 10px;
+        }
     }
 }
 
