--- a/src/app/calculator/calculator.component.scss
+++ b/src/app/calculator/calculator.component.scss
@@ -20,10 +20,9 @@
     border: 1px solid var(--accent2);
     border-radius: 16px;
     height: 36px;
+    width: 45%;
     min-width: 150px;
     max-width: 400px;
-    width: 45%;
-    flex: 1;
     transition: all 125ms ease-in-out;
 
     &:hover{
@@ -45,6 +44,7 @@
 
     .inputAsset{
         width: 100%;
+        height: 20px!important;
         color: var(--accent2);
         border-left: 1px var(--accent2) solid;
         font-weight: var(--font-bold);
@@ -59,7 +59,8 @@
         justify-content: center;
         position: relative;
         font-size: 14px;
-        height: 36px;
+        height: 20px;
+        z-index: 100;
 
         // list of altiernative Assets
         li {
@@ -92,8 +93,8 @@
     background-color: var(--bg);
     border-radius: 16px;
     height: 36px;
-    min-width: 150px;
     width: 45%;
+    min-width: 150px;
     max-width: 400px;
     text-align: center;
     font-size: 16px;
@@ -120,7 +121,6 @@
 
 .imgArrows {
     width: 1.5rem;
-    transform: translateX(12px);
 }
 
 input::-webkit-outer-spin-button,
