--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+width: 100%;
     max-width: 960px;
     max-height: 40vh;
 
