--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -10,6 +10,18 @@
     height: 100%;
     overflow: auto;
     gap: 1em;
+    transform: all 400ms ease-in-out;
+
+    &::-webkit-scrollbar {
+        width: 0px;
+        scrollbar-width: 0px;
+    }
+
+    &:hover::-webkit-scrollbar{
+        width: 8px;
+        scrollbar-width: 8px;
+        background-color:grey;
+      }
 
     @media (max-width: 1100px) {
         width: 100%;
@@ -24,7 +36,10 @@
     }
 }
 
+
+
 .card {
+
     position: relative;
     display: flex;
     flex-direction: column;
@@ -98,7 +113,6 @@
         left: 10px;
         font-size: 14px;
         color: var(--assetGrey);
-
 
         &::after {
             content: "";
