--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -12,21 +12,8 @@
     <span>Angaben gemäß § 5 TMG</span>
 
     <p class="text">
-        Dieses Projekt entstand im Rahmen der Weiterbildung zur Frontend-Software Entwicklerin und dient v.a.
-        Testzwecken.
+        Dieses Projekt entstand im Rahmen der Weiterbildung zur Frontend-Software Entwicklerin.
     </p>
-
-
-    <h2>Datenherkunft</h2>
-
-    Alle Daten werden von der öffentlichen API Schnittstelle, die von Coingecko bereitgestellt wird, bezogen.<br>
-    Es kann keine Haftung für Richtigkeit und Aktualität der dargestellten Daten übernommen werden.<br>
-    <br>
-    Mehr erfahren unter:<br>
-    >> https://www.coingecko.com/<br><br>
-    API:<br>
-    >> https://www.coingecko.com/en/api<br>
-
 
 
     <h2>Kontakt</h2>
@@ -35,6 +22,22 @@
     Mühlenstrasse 6<br>
     01774 Klingenberg<br>
     Telefon: 0175-69 16 381<br>
+
+
+    <h2>Datenherkunft</h2>
+
+    Alle Daten werden von der öffentlichen API Schnittstelle, die von Coingecko bereitgestellt wird, bezogen.<br>
+    Es kann keine Haftung für Richtigkeit und Aktualität der dargestellten Daten übernommen werden.<br>
+    <br>
+    Mehr zu Coingecko:<br>
+    <a href="https://www.coingecko.com/">www.coingecko.com/</a>
+   <br>   <br>
+    API-Schnittstelle:<br>
+    <a href="https://www.coingecko.com/en/api">www.coingecko.com/en/api</a>
+    <br>
+
+
+
  
 
 
