--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -17,7 +17,7 @@
             [(ngModel)]="assetInput" 
             (ngModelChange)="getSearchData()"
             (focus)="toggleList(true)" 
-            [value]="requestedAssetID | titlecase"
+            [value]="assetService.requestedAssetID | titlecase"
             >
             
             <!-- position absolute -->
