--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -1,5 +1,6 @@
 <div 
     @fadeIn
+    (click)="showAsset(asset)"
     *ngFor="let asset of assetNames.slice(0, 10); index as i" class="card">
     <div class="upperRow">
         <img class="image" src="{{ images[i] }}">
