--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -2,10 +2,11 @@
 
     <input 
         class="inputNumber"
+        #inputNumber
         min="0" 
         type="number" 
-        [(ngModel)]="amountInput" 
-        (ngModelChange)="calculateExchange()" >
+        [(ngModel)]="assetService.amountInput" 
+        (ngModelChange)="assetService.calculateExchange()" >
 
                
             <!-- position rel -->
@@ -15,9 +16,9 @@
             class="inputAsset"
             min="2" 
             [(ngModel)]="assetInput" 
-            (ngModelChange)="getSearchData()"
-            (focus)="toggleList(true)" 
-            [value]="assetService.requestedAssetID | titlecase"
+            (ngModelChange)="getSearchData(); assetService.calculateExchange()"
+            (focus)="toggleList(true)"   
+            [value]="assetService.requestedAssetID"       
             >
             
             <!-- position absolute -->
@@ -43,6 +44,6 @@
 
 <!-- EUR SECTION -->
 <div class="currencyEUR-container">
-    <input [(ngModel)]="priceInEUR" class="inputNumber" type="number" disabled="true" >
+    <input [(ngModel)]='assetService.priceInEUR' class="inputNumber" type="number" disabled="true" >
     <div class="EUR">Euro</div>
 </div>
