--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -12,7 +12,7 @@
     <span>Angaben gemäß § 5 TMG</span>
 
     <p class="text">
-        Dieses Projekt entstand im Rahmen der Weiterbildung zur Frontend-Software Entwicklerin.
+        Dies ist ein nicht-kommerzielles Projekt, dass im Rahmen meiner Weiterbildung zum Frontend-Developer entstand.
     </p>
 
 
