--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -10,6 +10,11 @@
         width: 150px;
     }
 
+    @media (max-height: 780px) {
+        min-width: 98px;
+        width: 98px;
+    }
+
     &:after {
         content: "";
         width: 1px;
@@ -17,7 +22,7 @@
         height: 155px;
         position: absolute;
         right: 0;
-        top: 0;
+        top: 0;  
     }
 }
 
@@ -38,10 +43,18 @@
         font-size: 24px;
         font-weight: 200;
 
+        @media (max-height: 780px) {
+            font-size: 22px;
+        }
+
         .your {
             font-size: 14px !important;
             letter-spacing: 10px;
             margin-left: 10px;
+
+            @media (max-height: 780px) {
+                font-size: 12px!important;
+            }
         }
     }
 }
@@ -51,7 +64,7 @@ h1 {
     position: absolute;
     writing-mode: vertical-lr;
     left: 0;
-    bottom: 0;
+    bottom: -16px;
     color: rgba(245, 245, 245, 0);
     font-size: 172px;
     font-weight: 900;
@@ -61,6 +74,12 @@ h1 {
     @media (min-width: 1600px) {
         font-size: 202px;
     }
+
+    @media (max-height: 780px) {
+        font-size: 152px;
+    }
+
+
 }
 
 #offset {
