--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -8,19 +8,18 @@
     min-width: 180px;
     max-width: 230px;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
     gap: 1em;
     transform: all 400ms ease-in-out;
 
     &::-webkit-scrollbar {
-        width: 0px;
-        scrollbar-width: 0px;
+        background-color: transparent;
+        width: 3px;
+        scrollbar-width: 3px;
     }
 
     &:hover::-webkit-scrollbar{
-        width: 8px;
-        scrollbar-width: 8px;
-        background-color:grey;
+        background-color:rgb(75, 72, 72);
       }
 
     @media (max-width: 1100px) {
@@ -36,8 +35,6 @@
     }
 }
 
-
-
 .card {
     position: relative;
     display: flex;
@@ -48,7 +45,7 @@
     border-radius: 16px;
     padding: 45px 6px 40px 6px;
     color: var(--primary-light);
-    width: 100%;
+    width: calc(100% - 8px);
     min-height: 150px;
     overflow: hidden;
     transition: all ease-in-out 150ms;
@@ -82,7 +79,7 @@
         min-height: 200px;
     }
 
-    @media (max-width: 440px) {
+    @media (max-width: 445px) {
         width: 90%;
         max-width: 400px;
         min-height: 200px;
@@ -105,6 +102,14 @@
     .currPriceNumber{
         font-size: 16px;
         font-weight: 600;
+
+        @media (max-width: 445px) {
+            font-size: 20px;
+        }
+    
+        @media (max-width: 350px) {
+            font-size: 24px;
+        }
     }
 
     .assetName {
@@ -113,6 +118,10 @@
         left: 10px;
         font-size: 14px;
         color: var(--assetGrey);
+
+        @media (max-width: 445px) {
+            font-size: 18px;
+        }
 
         &::after {
             content: "";
@@ -143,7 +152,13 @@
         height: 40px;
         border-radius: 100%;
         filter: drop-shadow(0.3rem 0.4rem 0.55rem rgb(22, 22, 22));
+
+        @media (max-width: 445px) {
+            width: 54px;
+            height: 54px;
+        }
     }
+
     .rankingNr {
         position: absolute;
         z-index: 4;
@@ -152,6 +167,10 @@
         font-size: 44px;
         font-weight: var(--font-bold);
         color: rgb(156 164 173 / 53%);
+
+        @media (max-width: 445px) {
+            font-size: 50px;
+        }
     }
 }
 
@@ -162,6 +181,11 @@
     align-items: center;
     gap: 10px;
     font-size: 14px;
+
+    @media (max-width: 445px) {
+        font-size: 18px;
+    }
+
 
     .row {
         width: 100%;
