--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,7 +20,10 @@
     </div>
 
     <!-- ASSET INFOS + TEXT -->
-    <div *ngIf="currentTab === 'table'" class="infoContainer">
+    <div 
+        *ngIf="currentTab === 'table'" 
+        class="infoContainer"
+        >
 
         <div class="furtherInfos">
             <div *ngIf="assetWebsite" class="infoWithIcon websiteLink">
@@ -41,25 +44,49 @@
         </div>
 
         <!-- DESCRIPTION ASSET -->
-        <div class="shortText desktopOnly">
+        <div 
+            class="shortText expandableText desktopOnly " >
             <!-- must be innerHTML to have correct formatting of links from API
             CAVE: be sure to have a trustworthy source innerHTML allows for cross-site scripting -->
-            <span #innerHTMLText [innerHTML]="fulltextRequested ? assetInfotext : (assetInfotext | slice:0:550)"
-                [class.bottomMargin]="fulltextRequested">
+            <span 
+                [innerHTML]="fulltextRequested ? assetInfotext : (assetInfotext | slice:0:550)"
+                [class.bottomMargin]="fulltextRequested"
+                [class.expandAnimation]="fulltextRequested"
+                class="expandableText">
             </span>
-            <span *ngIf="!fulltextRequested" (click)="fullText('open')" class="readMore">... read more</span>
-            <span *ngIf="fulltextRequested" (click)="fullText('close')" class="readMore readmore-open">... show
-                less</span>
+
+            <span 
+                *ngIf="!fulltextRequested && assetInfotext.length > 550" 
+                (click)="fullText('open')" 
+                class="readMore">  
+                ... read more
+            </span>
+
+            <span 
+                *ngIf="fulltextRequested" 
+                (click)="fullText('close')" 
+                class="readMore readmore-open">   
+                ... show less
+            </span>
         </div>
 
         <div class="shortText mobileOnly">
-            <span [innerHTML]="fulltextRequested ? assetInfotext : (assetInfotext | slice:0:300)"
+            <span 
+                [innerHTML]="fulltextRequested ? assetInfotext : (assetInfotext | slice:0:300)"
                 [class.bottomMargin]="fulltextRequested">
             </span>
-            <span *ngIf="!fulltextRequested" (click)="fullText('open')" class="readMore">... read more</span>
-
-            <span *ngIf="fulltextRequested" (click)="fullText('close')" class="readMore readmore-open">... show
-                less</span>
+            <span 
+                *ngIf="!fulltextRequested" 
+                (click)="fullText('open')" 
+                class="readMore">   
+                ... read more
+            </span>
+            <span 
+                *ngIf="fulltextRequested" 
+                (click)="fullText('close')" 
+                class="readMore readmore-open">   
+                ... show less
+            </span>
         </div>
 
     </div>
